syntax = "proto3";

package sdc.common;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.common";
option java_outer_classname = "CommonTypes";

message QName {
  string namespace = 1;
  string localName = 2;
}

message LocalizedString {
  string value = 1;
  string locale = 2;
}